@@ -1,20 +1,20 @@
 ## Rcpp: Seamless R and C++ Integration
 
 [![Build Status](https://travis-ci.org/RcppCore/Rcpp.svg)](https://travis-ci.org/RcppCore/Rcpp)
-[![License](https://eddelbuettel.github.io/badges/GPL2+.svg)](http://www.gnu.org/licenses/gpl-2.0.html)
-[![CRAN](http://www.r-pkg.org/badges/version/Rcpp)](https://cran.r-project.org/package=Rcpp)
+[![License](https://eddelbuettel.github.io/badges/GPL2+.svg)](https://www.gnu.org/licenses/gpl-2.0.html)
+[![CRAN](https://www.r-pkg.org/badges/version/Rcpp)](https://cran.r-project.org/package=Rcpp)
 [![Dependencies](https://tinyverse.netlify.com/badge/Rcpp)](https://cran.r-project.org/package=Rcpp)
 [![Coverage Status](https://codecov.io/gh/RcppCore/Rcpp/graph/badge.svg)](https://codecov.io/github/RcppCore/Rcpp?branch=master)
 [![Debian package](https://img.shields.io/debian/v/r-cran-rcpp/sid?color=brightgreen)](https://packages.debian.org/sid/r-cran-rcpp)
 [![Last Commit](https://img.shields.io/github/last-commit/RcppCore/Rcpp)](https://github.com/RcppCore/Rcpp)
-[![Downloads](http://cranlogs.r-pkg.org/badges/Rcpp?color=brightgreen)](http://www.r-pkg.org/pkg/Rcpp)
+[![Downloads](https://cranlogs.r-pkg.org/badges/Rcpp?color=brightgreen)](https://www.r-pkg.org/pkg/Rcpp)
 [![CRAN use](https://jangorecki.gitlab.io/rdeps/Rcpp/CRAN_usage.svg?sanitize=true)](https://cran.r-project.org/package=Rcpp)
 [![CRAN indirect](https://jangorecki.gitlab.io/rdeps/Rcpp/indirect_usage.svg?sanitize=true)](https://cran.r-project.org/package=Rcpp)
 [![BioConductor use](https://jangorecki.gitlab.io/rdeps/Rcpp/BioC_usage.svg?sanitize=true)](https://cran.r-project.org/package=Rcpp)
 [![StackOverflow](https://img.shields.io/badge/stackoverflow-rcpp-orange.svg)](https://stackoverflow.com/questions/tagged/rcpp)
-[![JSS](https://img.shields.io/badge/JSS-10.18637%2Fjss.v040.i08-brightgreen)](http://dx.doi.org/10.18637/jss.v040.i08)
+[![JSS](https://img.shields.io/badge/JSS-10.18637%2Fjss.v040.i08-brightgreen)](https://dx.doi.org/10.18637/jss.v040.i08)
 [![Springer useR!](https://img.shields.io/badge/Springer%20useR!-10.1007%2F978--1--4614--6868--4-brightgreen)](https://www.springer.com/gp/book/9781461468677)
-[![TAS](https://img.shields.io/badge/TAS-10.1080%2F00031305.2017.1375990-brightgreen)](http://dx.doi.org/10.1080/00031305.2017.1375990)
+[![TAS](https://img.shields.io/badge/TAS-10.1080%2F00031305.2017.1375990-brightgreen)](https://dx.doi.org/10.1080/00031305.2017.1375990)
 
 ### Synopsis
 
@@ -31,11 +31,11 @@ represented as instances of `Rcpp::Environment`, functions are represented as
 vignette (now published as a
 [TAS paper](https://amstat.tandfonline.com/doi/abs/10.1080/00031305.2017.1375990); an
 [earlier introduction](https://cran.r-project.org/package=Rcpp/vignettes/Rcpp-jss-2011.pdf)
-was also published as a [JSS paper](http://www.jstatsoft.org/v40/i08/))
+was also published as a [JSS paper](https://www.jstatsoft.org/v40/i08/))
 provides a good entry point to Rcpp as do the [Rcpp
 website](http://www.rcpp.org), the [Rcpp
-page](http://dirk.eddelbuettel.com/code/rcpp.html) and the [Rcpp
-Gallery](http://gallery.rcpp.org). Full documentation is provided by the
+page](https://dirk.eddelbuettel.com/code/rcpp.html) and the [Rcpp
+Gallery](https://gallery.rcpp.org). Full documentation is provided by the
 [Rcpp book](http://www.rcpp.org/book/).
 
 Other highlights:
@@ -71,7 +71,7 @@ TAS](https://amstat.tandfonline.com/doi/abs/10.1080/00031305.2017.1375990) (and 
 [preprint in PeerJ](https://peerj.com/preprints/3188/)). Also available is an
 [earlier
 introduction](https://cran.r-project.org/package=Rcpp/vignettes/Rcpp-jss-2011.pdf)
-which was published as a [JSS paper](http://www.jstatsoft.org/v40/i08/))
+which was published as a [JSS paper](https://www.jstatsoft.org/v40/i08/))
 
 Among the other vignettes are the [Rcpp
 FAQ](https://cran.r-project.org/package=Rcpp/vignettes/Rcpp-FAQ.pdf) and the
@@ -82,12 +82,12 @@ by Eddelbuettel (2013, Springer); see 'citation("Rcpp")' for details.
 
 ### Examples
 
-The [Rcpp Gallery](http://gallery.rcpp.org) showcases over one hundred fully
+The [Rcpp Gallery](https://gallery.rcpp.org) showcases over one hundred fully
 documented and working examples. The
 [package RcppExamples](https://cran.r-project.org/package=RcppExamples) contains a few basic
 examples covering the core data types.
 
-A number of examples are included, as are 1560 unit tests which provide
+A number of examples are included, as are well over one thousand unit tests which provide
 additional usage examples.
 
 An earlier version of Rcpp, containing what we now call the 'classic Rcpp
@@ -97,8 +97,8 @@ available for code relying on the older interface. New development should
 always use this Rcpp package instead.
 
 Other usage examples are provided by packages using Rcpp. As of June 2020,
-there are 1947 [CRAN](https://cran.r-project.org) packages using Rcpp, a further
-203 [BioConductor](http://www.bioconductor.org) packages in its current release
+there are 1990 [CRAN](https://cran.r-project.org) packages using Rcpp, a further
+203 [BioConductor](https://www.bioconductor.org) packages in its current release
 as well as an unknown number of GitHub, Bitbucket, R-Forge, ... repositories
 using Rcpp.  All these packages provide usage examples for Rcpp.
 
@@ -119,13 +119,13 @@ questions 1.2 and 1.3 in the
 ### Support
 
 The best place for questions is the
-[Rcpp-devel](http://lists.r-forge.r-project.org/cgi-bin/mailman/listinfo/rcpp-devel)
+[Rcpp-devel](https://lists.r-forge.r-project.org/cgi-bin/mailman/listinfo/rcpp-devel)
 mailing list hosted at R-forge.  Note that in order to keep spam down, you must
 be a subscriber in order to post.  One can also consult the list archives to see
 if your question has been asked before.
 
 Another option is to use
-[StackOverflow and its 'rcpp' tag](http://stackoverflow.com/questions/tagged/rcpp).
+[StackOverflow and its 'rcpp' tag](https://stackoverflow.com/questions/tagged/rcpp).
 Search functionality (use `rcpp` in squared brackets as in
 [[rcpp] my question terms](https://stackoverflow.com/search?q=[rcpp]%20my%20question%20terms)
 to tag the query) is very valuable as many questions have indeed been asked, and
