@@ -128,7 +128,7 @@
                   Allaire and Kevin Ushey and Qiang Kou and
                   Nathan Russel and John Chambers and Douglas Bates},
   year =	 2020,
-  note =	 {R package version 1.0.4},
+  note =	 {R package version 1.0.5},
   url =		 CRAN # "package=Rcpp"
 }
 
@@ -449,8 +449,6 @@
   address =	 {New York},
   isbn =	 {978-1-4614-6867-7}
 }
-; see http://eigen.tuxfamily.org/index.php?title=BibTeX
-; replaced 'howpublished' with 'url' and updated year to 2011, and again to 2012
 
 @article{Efron:1979:Bootstrap,
   URL =          {http://www.jstor.org/stable/2958830},
@@ -468,9 +466,7 @@
   author =	 {Ga\"{e}l Guennebaud and Beno\^{i}t Jacob and others},
   title =	 {Eigen v3},
   year =	 2012,
-  url =		 {http://eigen.tuxfamily.org},
-  ; see http://eigen.tuxfamily.org/index.php?title=BibTeX
-  ; replaced 'howpublished' with 'url' and updated year to 2011, and again to 2012
+  url =		 {http://eigen.tuxfamily.org}
 }
 
 @Manual{GSL,
