@@ -1,3 +1,12 @@
+2020-07-01  Dirk Eddelbuettel  <edd@debian.org>
+
+        * DESCRIPTION (Date, Version): Release 1.0.5
+
+        * inst/include/Rcpp/config.h: Idem
+        * inst/NEWS.Rd: Idem
+        * vignettes/rmd/Rcpp.bib: Idem
+        * inst/bib/Rcpp.bib: Idem
+
 2020-06-27  Dirk Eddelbuettel  <edd@debian.org>
 
 	* docker/ci/Dockerfile: Revert back to standard r-base container
